<resources>
    <string name="app_name">My Application</string>
    <string name="humidity_label">Humidity</string>
    <string name="wind_speed_label">Wind Speed</string>
    <string name="pressure_label">Pressure</string>
    <string name="wind_direction_label">Wind Direction</string>
    <string name="visibility_label">Visibility</string>
    <string name="real_feel_label">RealFeel</string>
    <string name="current_weather">Current Weather</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="internet_connection">MapsActivity</string>
</resources>